--- a/ly-item/ly-item-service/src/main/resources/application.yml
+++ b/ly-item/ly-item-service/src/main/resources/application.yml
@@ -7,6 +7,14 @@ spring:
     url: jdbc:mysql://localhost:3306/leyou
     username: root
     password: root
+  rabbitmq:
+      host: 192.168.25.128
+      username: leyou
+      password: leyou
+      virtual-host: /leyou
+      template:
+        exchange: leyou.item.exchange
+      publisher-confirms: true
 eureka:
   client:
     service-url:
