--- a/ly-page/src/main/resources/application.yml
+++ b/ly-page/src/main/resources/application.yml
@@ -1,14 +1,10 @@
 server:
-  port: 8083
+  port: 8084
 spring:
   application:
-    name: search-service
-  data:
-    elasticsearch:
-      cluster-name: elasticsearch
-      cluster-nodes: 192.168.25.128:9300
-  jackson:
-    default-property-inclusion: non_null
+    name: ly-page
+  thymeleaf:
+    cache: false
   rabbitmq:
       host: 192.168.25.128
       username: leyou
@@ -23,4 +19,4 @@ eureka:
     lease-expiration-duration-in-seconds: 10 # 10秒不发送就过期
     prefer-ip-address: true
     ip-address: 127.0.0.1
-    instance-id: ${spring.application.name}:${server.port}
+    instance-id: ${spring.application.name}.${server.port}
